# nlp-match-event-reporter

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  nlp_reporter.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5b4390189d77_initial_database_schema.py
docs/: api.md
scripts/: create_sample_data.py  init_db.py  setup_dev.sh
src/nlp_match_event_reporter/: __init__.py  main.py
src/nlp_match_event_reporter/api/: __init__.py  routes.py
src/nlp_match_event_reporter/api/endpoints/: events.py  health.py  matches.py  voice.py
src/nlp_match_event_reporter/core/: config.py  database.py  exceptions.py  logging.py
src/nlp_match_event_reporter/models/: __init__.py  database.py  schemas.py
src/nlp_match_event_reporter/services/: fogis_client.py  match_sync.py  voice_processing.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py  test_voice_api.py
tests/unit/: test_config.py  test_database.py  test_exceptions.py  test_fogis_client.py  test_health.py  test_matches.py  test_schemas.py  test_voice_processing.py
